[package]
name = "rustomato"
version = "0.1.0"
authors = ["macoshita <macoshita@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
figlet-rs = "0.1.3"
fps_clock = "2.0.0"
msgbox = "0.6.0"